frontend/test/should_fail/bitbucket30_003.grg
rule rEmitSetAEdgeFailDirected {
    modify {
        eval {
			def ref s:set<Edge> =edges();
			emit("1 value of attribute 5 6 " + s + "\n");
		}
    }
}
